--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
     "name": "my_package",
     "description": "",
     "scripts": {
-    "start": "node index.js",
-      "test": "jest"
+        "start": "node index.js",
+        "test": "jest"
     },
-    
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependecies"{
+    "dependecies": {
         "inquirer": "8.2.4"
     },
-    "devDependencies": {
-        "jest": "^29.0.3"
+    "dependencies": {
+        "@inquirer/prompts": "^5.3.8",
+        "inquirer": "^10.0.3",
+        "jest": "^29.7.0"
     }
-   }
+}
